<resources>
    <string name="app_name">MetroVN</string>
    <string name="title_name">MetroVN</string>
    <string name="hint">Tìm kiếm địa điểm</string>
    <string name="metro_station">Trạm Metro</string>
    <string name="search">Tra cứu</string>
    <string name="personal">Tài khoản </string>
    <string name="personal_name">Metro User</string>
    <string name="info_personal">Thông tin cá nhân</string>
    <string name="change_location">Thay đổi khu vực</string>
    <string name="ticket">Vé đã mua</string>
    <string name="info_company">Thông tin công ty</string>
    <string name="logout">Đăng xuất</string>
    <string name="price">20.000 VND</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_prompt">Hãy thêm tuyến yêu thích</string>
</resources>