<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottomnav.PersonalFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/blue"
            android:orientation="vertical">
            <TextView
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/personal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_ava"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="95dp"
                app:cardCornerRadius="50dp">
                <ImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/avatar"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/personal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_name"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/white">
                    <Button
                        android:id="@+id/btn_userinfo"
                        android:layout_width="380dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/iconuser2"
                        android:drawableRight="@drawable/iconnext"
                        android:text="@string/info_personal"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/white">
                    <Button
                        android:id="@+id/btn_ticket"
                        android:layout_width="380dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/icondata"
                        android:drawableRight="@drawable/iconnext"
                        android:text="@string/ticket"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/white">
                    <Button
                        android:id="@+id/btn_logout"
                        android:layout_width="380dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/logout"
                        android:drawableRight="@drawable/iconnext"
                        android:text="@string/logout"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"  />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>