<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottomnav.Personal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/green"
        android:orientation="vertical">
        <TextView
            android:id="@+id/personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/personal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_ava"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="95dp"
            app:cardCornerRadius="50dp">
            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/avatar"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/personal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_name"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginTop="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                app:cardBackgroundColor="@color/white"
                android:layout_marginTop="30dp"/>

                <Button
                    android:id="@+id/btn_info"
                    android:layout_width="380dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/iconuser2"
                    android:drawableRight="@drawable/iconnext"
                    android:text="@string/info_personal"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|start"
                    android:paddingStart="20dp"
                    android:drawablePadding="10dp"
                    android:paddingEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <androidx.cardview.widget.CardView
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                app:cardBackgroundColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">
                <Button
                    android:id="@+id/btn_updatedata"
                    android:layout_width="380dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/icondata"
                    android:drawableRight="@drawable/iconnext"
                    android:text="@string/update_data"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|start"
                    android:paddingStart="20dp"
                    android:drawablePadding="10dp"
                    android:paddingEnd="20dp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                app:cardBackgroundColor="@color/white">

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="380dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/logout"
                    android:drawableRight="@drawable/iconnext"
                    android:text="@string/logout"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:menu="@menu/menu_bottom_nav"/>
    </LinearLayout>
</RelativeLayout>