<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".bottomnav.MenuActivity"
    android:background="@drawable/background">
    <androidx.cardview.widget.CardView android:id="@+id/avaCardview"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="200dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp">
        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/avatar"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/avaCardview"
        android:layout_marginTop="57dp"
        android:text="@string/personal_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <SearchView
        android:id="@+id/searchView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTextView"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:queryHint="Tìm vị trí muốn đến"
        android:background="@drawable/searchview_background"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/mapCardView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="200dp"
        android:layout_below="@id/searchView"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        app:cardBackgroundColor="@color/blue">
        <Button
            android:id="@+id/metro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/iconmap"
            android:drawablePadding="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:backgroundTint="@color/blue"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/mapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mapCardView"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        android:text="@string/metro_station"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/paymentCardView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="200dp"
        android:layout_alignTop="@id/mapCardView"
        android:layout_toEndOf="@id/mapCardView"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/blue">
        <Button
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/payment"
            android:drawablePadding="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:gravity="center_vertical"
            android:backgroundTint="@color/blue"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/paymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/paymentCardView"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@id/paymentCardView"
        android:text="Mua vé" />
    <androidx.cardview.widget.CardView
        android:id="@+id/locationCardView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="200dp"
        android:layout_alignTop="@id/mapCardView"
        android:layout_toEndOf="@id/mapCardView"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/blue">
        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/iconlocation"
            android:drawablePadding="8dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:gravity="center_vertical"
            android:backgroundTint="@color/blue"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationCardView"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@id/locationCardView"
        android:text="@string/search" />



    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/mapTextView"
        tools:context=".MainFunction.MapsActivity" />


</RelativeLayout>
